@@ -3,7 +3,7 @@
  *
  * Copyright (c) 2021 TeamAppliedEnergistics
  *
- * Permission is hereby granted, free of charge, to any person obtaining a copy of
+ * Permission is hereby granted, free of charge, to any person obtaining Counter copy of
  * this software and associated documentation files (the "Software"), to deal in
  * the Software without restriction, including without limitation the rights to
  * use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
@@ -24,9 +24,9 @@
 package appeng.api.stacks;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
-import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 
@@ -35,61 +35,101 @@ import com.google.common.collect.Iterators;
 import org.jetbrains.annotations.Nullable;
 
 import it.unimi.dsi.fastutil.objects.Object2LongMap;
-import it.unimi.dsi.fastutil.objects.Reference2ObjectMap;
-import it.unimi.dsi.fastutil.objects.Reference2ObjectOpenHashMap;
+import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
 
 import appeng.api.config.FuzzyMode;
 
 /**
- * Associates a generic value of type T with AE keys and makes key/value pairs searchable with fuzzy mode semantics.
+ * Associates Counter generic value of type T with AE keys and makes key/value pairs searchable with fuzzy mode
+ * semantics.
  */
 public final class KeyCounter implements Iterable<Object2LongMap.Entry<AEKey>> {
-    // First map contains a mapping from AEKey#primaryKey
-    private final Reference2ObjectMap<Object, VariantCounter> lists = new Reference2ObjectOpenHashMap<>();
+
+    private static final Object object = new Object();
+    private VariantCounter variantCounter;
+
+    // First map contains Counter mapping from AEKey#primaryKey
+    private Object2ObjectOpenHashMap<Object, VariantCounter> lists;
 
     public Collection<Object2LongMap.Entry<AEKey>> findFuzzy(AEKey key, FuzzyMode fuzzy) {
-        Objects.requireNonNull(key, "key");
-        var subIndex = getSubIndexOrNull(key);
-        return subIndex == null ? List.of() : subIndex.findFuzzy(key, fuzzy);
+        if (this.lists == null)
+            return Collections.emptyList();
+        if (key.getFuzzySearchMaxValue() > 0) {
+            VariantCounter counter = this.lists.get(key.getPrimaryKey());
+            if (counter != null)
+                return counter.findFuzzy(key, fuzzy);
+        } else if (this.variantCounter != null) {
+            long l = this.variantCounter.getOrMin(key);
+            if (l > Long.MIN_VALUE)
+                return Collections.singleton(new Counter(l, key));
+        }
+        return Collections.emptyList();
     }
 
     public void removeZeros() {
-        var iterator = lists.entrySet().iterator();
+        if (this.lists == null)
+            return;
+        if (this.variantCounter != null && this.lists.size() == 1) {
+            this.variantCounter.removeZeros();
+            return;
+        }
+        var iterator = lists.object2ObjectEntrySet().fastIterator();
         while (iterator.hasNext()) {
             var entry = iterator.next();
-            var variantList = entry.getValue();
-            variantList.removeZeros();
-            if (variantList.isEmpty()) {
+            VariantCounter variantCounter = entry.getValue();
+            variantCounter.removeZeros();
+            if (variantCounter != this.variantCounter && variantCounter.isEmpty())
                 iterator.remove();
-            }
         }
     }
 
     public void removeEmptySubmaps() {
-        lists.values().removeIf(VariantCounter::isEmpty);
+        if (this.lists == null)
+            return;
+        var iterator = lists.object2ObjectEntrySet().fastIterator();
+        while (iterator.hasNext()) {
+            var entry = iterator.next();
+            VariantCounter variantCounter = entry.getValue();
+            if (variantCounter != this.variantCounter && variantCounter.isEmpty())
+                iterator.remove();
+        }
     }
 
     public void addAll(KeyCounter other) {
-        for (var entry : other.lists.entrySet()) {
-            var ourSubIndex = lists.get(entry.getKey());
-            if (ourSubIndex == null) {
-                lists.put(entry.getKey(), entry.getValue().copy());
-            } else {
-                ourSubIndex.addAll(entry.getValue());
+        if (this.lists == null)
+            this.lists = new Object2ObjectOpenHashMap<>();
+        var map = other.lists;
+        for (var iterator = map.object2ObjectEntrySet().fastIterator(); iterator.hasNext();) {
+            var entry = iterator.next();
+            var obj = entry.getKey();
+            var counter = lists.get(obj);
+            if (counter == null) {
+                var counter1 = entry.getValue().copy();
+                if (obj == object)
+                    this.variantCounter = counter1;
+                this.lists.put(obj, counter1);
+                continue;
             }
+            counter.addAll(entry.getValue());
         }
     }
 
     public void removeAll(KeyCounter other) {
-        for (var entry : other.lists.entrySet()) {
-            var ourSubIndex = lists.get(entry.getKey());
-            if (ourSubIndex == null) {
-                var copied = entry.getValue().copy();
-                copied.invert();
-                lists.put(entry.getKey(), copied);
-            } else {
-                ourSubIndex.removeAll(entry.getValue());
+        if (this.lists == null)
+            this.lists = new Object2ObjectOpenHashMap<>();
+        var map = other.lists;
+        for (var iterator = map.object2ObjectEntrySet().fastIterator(); iterator.hasNext();) {
+            var entry = iterator.next();
+            var obj = entry.getKey();
+            var counter = lists.get(obj);
+            if (counter == null) {
+                var counter1 = entry.getValue().copy();
+                if (obj == object)
+                    this.variantCounter = counter1;
+                this.lists.put(obj, counter1);
+                continue;
             }
+            counter.removeAll(entry.getValue());
         }
     }
 
@@ -109,12 +149,13 @@ public final class KeyCounter implements Iterable<Object2LongMap.Entry<AEKey>> {
      * Removes the given key from this counter, and returns the old value (or 0).
      */
     public long remove(AEKey key) {
-        var subIndex = getSubIndex(key);
-        var ret = subIndex.remove(key);
-        if (subIndex.isEmpty()) {
+        var counter = getSubIndexOrNull(key);
+        if (counter == null)
+            return 0L;
+        long l = counter.remove(key);
+        if (counter != this.variantCounter && counter.isEmpty())
             lists.remove(key.getPrimaryKey());
-        }
-        return ret;
+        return l;
     }
 
     public void set(AEKey key, long amount) {
@@ -122,61 +163,86 @@ public final class KeyCounter implements Iterable<Object2LongMap.Entry<AEKey>> {
     }
 
     public long get(AEKey key) {
-        Objects.requireNonNull(key);
-        var subIndex = lists.get(key.getPrimaryKey());
-        if (subIndex == null) {
-            return 0;
-        }
-        return subIndex.get(key);
+        if (this.lists == null)
+            return 0L;
+        var counter = getSubIndexOrNull(key);
+        if (counter == null)
+            return 0L;
+        return counter.get(key);
     }
 
     public void reset() {
-        for (var list : lists.values()) {
-            list.reset();
+        if (this.lists == null)
+            return;
+        if (this.variantCounter != null && this.lists.size() == 1) {
+            this.variantCounter.reset();
+            return;
         }
+        for (var iterator = this.lists.object2ObjectEntrySet().fastIterator(); iterator.hasNext();)
+            iterator.next().getValue().reset();
     }
 
     public void clear() {
-        for (var list : lists.values()) {
-            list.clear();
+        if (this.lists == null)
+            return;
+        if (this.variantCounter != null && this.lists.size() == 1) {
+            this.variantCounter.clear();
+            return;
         }
+        for (var iterator = this.lists.object2ObjectEntrySet().fastIterator(); iterator.hasNext();)
+            iterator.next().getValue().clear();
     }
 
     public boolean isEmpty() {
-        for (var list : lists.values()) {
-            if (!list.isEmpty()) {
+        if (this.lists == null)
+            return true;
+        if (this.variantCounter != null && this.lists.size() == 1)
+            return this.variantCounter.isEmpty();
+        for (var iterator = this.lists.object2ObjectEntrySet().fastIterator(); iterator.hasNext();)
+            if (!iterator.next().getValue().isEmpty())
                 return false;
-            }
-        }
         return true;
     }
 
     public int size() {
-        int tot = 0;
-        for (var list : lists.values()) {
-            tot += list.size();
-        }
-        return tot;
+        if (this.lists == null)
+            return 0;
+        if (this.variantCounter != null && this.lists.size() == 1)
+            return this.variantCounter.size();
+        int i = 0;
+        for (var iterator = this.lists.object2ObjectEntrySet().fastIterator(); iterator.hasNext();)
+            i += iterator.next().getValue().size();
+        return i;
     }
 
     @Override
     public Iterator<Object2LongMap.Entry<AEKey>> iterator() {
-        return Iterators.concat(
-                Iterators.transform(lists.values().iterator(), VariantCounter::iterator));
+        if (this.lists == null)
+            return Collections.emptyIterator();
+        if (this.variantCounter != null && this.lists.size() == 1)
+            return this.variantCounter.iterator();
+        return Iterators.concat(Iterators.transform(this.lists.values().iterator(), Iterable::iterator));
     }
 
     private VariantCounter getSubIndex(AEKey key) {
-        // We check before the call to computeIfAbsent, otherwise we'd need a capturing lambda.
-        if (key.getFuzzySearchMaxValue() > 0) {
+        if (lists == null)
+            this.lists = new Object2ObjectOpenHashMap<>();
+        if (key.getFuzzySearchMaxValue() > 0)
             return lists.computeIfAbsent(key.getPrimaryKey(), k -> new VariantCounter.FuzzyVariantMap());
-        } else {
-            return lists.computeIfAbsent(key.getPrimaryKey(), k -> new VariantCounter.UnorderedVariantMap());
+        if (this.variantCounter == null) {
+            this.variantCounter = new VariantCounter.UnorderedVariantMap();
+            this.lists.put(object, this.variantCounter);
         }
+        return this.variantCounter;
     }
 
     @Nullable
     private VariantCounter getSubIndexOrNull(AEKey key) {
-        return lists.get(key.getPrimaryKey());
+        if (lists == null)
+            return null;
+        if (key.getFuzzySearchMaxValue() > 0)
+            return lists.get(key.getPrimaryKey());
+        return this.variantCounter;
     }
 
     @Nullable
@@ -193,36 +259,63 @@ public final class KeyCounter implements Iterable<Object2LongMap.Entry<AEKey>> {
 
     @Nullable
     public Object2LongMap.Entry<AEKey> getFirstEntry() {
-        for (var value : lists.values()) {
-            var it = value.iterator();
-            if (it.hasNext()) {
+        if (this.lists == null)
+            return null;
+        for (var iterator = this.lists.object2ObjectEntrySet().fastIterator(); iterator.hasNext();) {
+            var it = iterator.next().getValue().iterator();
+            if (it.hasNext())
                 return it.next();
-            }
         }
         return null;
     }
 
     @Nullable
     public <T extends AEKey> Object2LongMap.Entry<AEKey> getFirstEntry(Class<T> keyClass) {
-        for (var value : lists.values()) {
-            var it = value.iterator();
+        if (this.lists == null)
+            return null;
+        for (var iterator = this.lists.object2ObjectEntrySet().fastIterator(); iterator.hasNext();) {
+            var it = iterator.next().getValue().iterator();
             if (it.hasNext()) {
                 var entry = it.next();
-                if (keyClass.isInstance(entry.getKey())) {
+                if (keyClass.isInstance(entry.getKey()))
                     return entry;
-                }
             }
         }
         return null;
     }
 
     public Set<AEKey> keySet() {
-        var keys = new HashSet<AEKey>(size());
-        for (var list : lists.values()) {
-            for (var entry : list) {
-                keys.add(entry.getKey());
-            }
+        if (this.lists == null)
+            return Collections.emptySet();
+        if (this.variantCounter != null && this.lists.size() == 1)
+            return this.variantCounter.keySet();
+        var set = new HashSet<AEKey>(size());
+        for (var iterator = this.lists.object2ObjectEntrySet().fastIterator(); iterator.hasNext();)
+            for (var entry : iterator.next().getValue())
+                set.add(entry.getKey());
+        return set;
+    }
+
+    public static class Counter implements Object2LongMap.Entry<AEKey> {
+        private final long l;
+        private final AEKey key;
+
+        public Counter(long param1Long, AEKey param1AEKey) {
+            this.l = param1Long;
+            this.key = param1AEKey;
         }
-        return keys;
+
+        public long getLongValue() {
+            return this.l;
+        }
+
+        public long setValue(long param1Long) {
+            return 0L;
+        }
+
+        @Override
+        public AEKey getKey() {
+            return this.key;
+        }
     }
 }
